--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Devices" Version="2.0.0-preview001" />
+    <PackageReference Include="Microsoft.Azure.Devices.Client" Version="2.0.0-preview001" />
     <PackageReference Include="System.IO.Ports" Version="6.0.0" />
     <PackageReference Include="YamlDotNet" Version="12.0.2" />
   </ItemGroup>
