1. Send message from device to Azure Function 2. Receive message from Azure Function 3. Device change DT info 4. DT send message to Device

--- a/IoTHublet/IoTHublet.csproj
+++ b/IoTHublet/IoTHublet.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="YamlDotNet" Version="12.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DTModel\DTModel.csproj" />
+  </ItemGroup>
+
 </Project>
